objects/PartnerOppsEligibility__c.object
<CustomObject>
    <fields>
        <fullName>Abandoned_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Abandoned Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>AsOfDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HRS Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Assigned_Date__c</fullName>
        <label>Last Opportunity Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Num_Of_Open_Opps__c</fullName>
        <label>Num Of Open Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppEligibilityScore__c</fullName>
        <label>OppEligibilityScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <label>PartnerType</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PartnerOppsEligibility</relationshipLabel>
        <relationshipName>PartnerOppsEligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundRobinCtr__c</fullName>
        <formula>-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoundRobinCtr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScoreType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip__c</fullName>
        <label>Skip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WinRatio__c</fullName>
        <label>WinRatio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PartnerOppsEligibility</label>
    <nameField>
        <label>PartnerOppsEligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartnerOppsEligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>